# pyfuze

./: .gitignore  LICENSE  README.md  build.py  compile_csrc.sh  pyproject.toml
.github/workflows/: publish2pypi.yml
csrc/: config.c  config.h  iniparser.h  main.c  pyfuze.c  pyfuze_config.c  pyfuze_config_parser.c  pyfuze_config_parser.h  pyfuze_unix.c  pyfuze_unix.h  pyfuze_utils.c  pyfuze_utils.h  pyfuze_windows.c  pyfuze_windows.h  utils.c  utils.h
examples/: ip.py  simple.py
examples/complex/: build.py  config.txt  main.py  pyproject.toml
examples/complex/unix_part/: __init__.py  app.py
examples/complex/windows_part/: __init__.py  app.py
pyfuze/: __init__.py  cli.py
src/pyfuze/: cli.py  utils.py
