[project]
name = "pyfuze"
version = "0.2.1"
description = "pyfuze makes your python script actually run anywhere"
readme = "README.md"
authors = [
    { name = "Tanix", email = "tanixlu@foxmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.15.3",
]

[project.scripts]
pyfuze = "pyfuze.cli:app"

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"
