[project]
name = "pyfuze"
version = "0.4.0"
description = "pyfuze makes your python script actually run anywhere"
readme = "README.md"
authors = [
    { name = "Tanix", email = "tanixlu@foxmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
pyfuze = "pyfuze.cli:cli"

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"
